--- a/frontend-vue/index.html
+++ b/frontend-vue/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- Configuração dinâmica para Docker -->
+    <script src="/config.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
